# Url2Bibtex

./: Dockerfile  README.md  SERVER.md  example.py  example2.py  example3.py  pyproject.toml  requirements-server.txt  server.py
url2bibtex/: __init__.py  converter.py  default_converter.py  handler.py  server.py  utils.py
url2bibtex/handlers/: __init__.py  aclanthology_handler.py  arxiv_handler.py  biorxiv_handler.py  cell_handler.py  doi_handler.py  github_handler.py  htmlmeta_handler.py  ieee_handler.py  openreview_handler.py  pii_handler.py  semanticscholar_handler.py  url_param_handler.py
