[project]
name = "url2bibtex"
version = "0.1.0"
description = "Convert paper URLs to BibTeX entries with a pluggable handler system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bibtex", "academic", "papers", "citation", "arxiv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0"
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]
mcp = [
    "mcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/url2bibtex"
Repository = "https://github.com/yourusername/url2bibtex"
Issues = "https://github.com/yourusername/url2bibtex/issues"

[project.scripts]
url2bibtex-server = "url2bibtex.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["url2bibtex"]
